--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,26 +5,7 @@
     </style>
 
     <div class="row">
-      <div class="col-lg-6">
-        <% if (blogs.length > 0) { for (var i = 0; i < blogs.length; i++) { %>
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title"><%= blogs[i].title %></h5>
-              <p class="card-text">
-                <%= blogs[i].content %>
-              </p>
-            </div>
-          </div>
-        <% } } else { %>
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Nothing?</h5>
-              <p class="card-text">
-                How could there be nothing?
-              </p>
-            </div>
-          </div>
-        <% } %>
-      </div>
+      <span class="site-link" data-route="/player">AJ link here</span>
+      <span class="site-link" data-route="/character">character link here</span>
     </div>
 
