--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -1,10 +1,4 @@
-    <style>
-      .closed-auction {
-        background-color: gray;
-      }
-    </style>
-
-    <div class="row">
-      <span class="site-link" data-route="/character">AJ link here</span>
-    </div>
+<div class="row">
+    <span class="site-link" data-route="/character">character link here</span>
+</div>
 
