--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,5 @@
-    <style>
-      .closed-auction {
-        background-color: gray;
-      }
-    </style>
-
-    <div class="row">
-      <span class="site-link" data-route="/player">AJ link here</span>
-      <span class="site-link" data-route="/character">character link here</span>
-    </div>
+<div>
+  <span class="site-link" data-route="/actions">AJ link here</span>
+  <span class="site-link" data-route="/character">character link here</span>
+</div>
 
