--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,39 @@
+body {
+    margin: 0;
+}
+.main {
+    width: 100%;
+    height: 100vh;
+    background: lightgray;
+}
+
+.side-nav {
+    position: fixed;
+    top: 75px;
+    left: 0;
+    width: 50px;
+    height: 100%;
+    background: lightblue;
+}
+
+.side-nav img {
+    padding: 5px;
+}
+
+.character-info {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 75px;
+    background: lightcyan;
+}
+
+#content-wrapper {
+    padding-left: 50px;
+    padding-top: 75px;
+}
+
 .user-panel i {
     width: 2.1rem;
     height: auto;
@@ -28,14 +64,14 @@
     height: 120px;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
-  }
-  
-  @-webkit-keyframes spin {
+}
+
+@-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
     100% { -webkit-transform: rotate(360deg); }
-  }
-  
-  @keyframes spin {
+}
+
+@keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-  }
+}
