--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-  <title><%= (typeof title != "undefined" ? title : "") %></title>
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta http-equiv="x-ua-compatible" content="ie=edge" />
 
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="img/favicon.ico">
-  </head>
-  <body>
-    <div id="loader"></div>
-    <div id="content-wrapper">        
+<link rel="stylesheet" href="css/style.css" />
+<link rel="icon" href="img/favicon.ico" />
+</head>
+
+<body>
+<div class="main">
+<div class="side-nav">
+<img class="site-link" src="img/hat.png" data-route="character" />
+<img class="site-link" src="img/hat.png" data-route="actions" />
+<img class="site-link" src="img/hat.png" data-route="/" />
+</div>
+<div class="character-info">
+
+</div>
+<div id="loader"></div>
+<div id="content-wrapper">
+
 <%- body %>
-    </div>
-  </body>
-  <footer>
 
-  </footer>
+</div>
+</div>
+</body>
+<footer>
+</footer>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="js/layout.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="js/layout.js"></script>
+
 </html>
