added tasks and planning for better layout

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <div>
-  <span class="site-link" data-route="/actions">AJ link here</span>
+  <span class="site-link" data-route="/tasks">AJ link here</span>
   <span class="site-link" data-route="/character">character link here</span>
 </div>
 
