--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,23 +1,29 @@
 body {
     margin: 0;
 }
+
+progress[value] {
+    /* Reset the default appearance */
+    -webkit-appearance: none;
+        appearance: none;
+
+    width: 100%;
+    height: 20px;
+}
+
 .main {
     width: 100%;
     height: 100vh;
     background: lightgray;
 }
 
-.side-nav {
+.current-task {
     position: fixed;
-    top: 75px;
+    bottom: 0;
     left: 0;
-    width: 50px;
-    height: 100%;
+    width: 100%;
+    height: 80px;
     background: lightblue;
-}
-
-.side-nav img {
-    padding: 5px;
 }
 
 .character-info {
@@ -30,7 +36,6 @@ body {
 }
 
 #content-wrapper {
-    padding-left: 50px;
     padding-top: 75px;
 }
 
