--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+<title>
+Task Lord
+</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -12,19 +15,12 @@
 
 <body>
 <div class="main">
-<div class="side-nav">
-<img class="site-link" src="img/hat.png" data-route="character" />
-<img class="site-link" src="img/hat.png" data-route="actions" />
-<img class="site-link" src="img/hat.png" data-route="/" />
-</div>
-<div class="character-info">
-
-</div>
+<div class="character-info"></div>
 <div id="loader"></div>
 <div id="content-wrapper">
-
 <%- body %>
-
+</div>
+<div id="tasks-wrapper" class="current-task"></div>
 </div>
 </div>
 </body>
