--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,42 +1,38 @@
-body {
-    margin: 0;
-}
-.main {
-    width: 100%;
-    height: 100vh;
-    background: lightgray;
-}
-
-.side-nav {
-    position: fixed;
-    top: 75px;
-    left: 0;
-    width: 50px;
+html, body {
     height: 100%;
-    background: lightblue;
+    margin: 0;
+    background-color:gray;
 }
 
-.side-nav img {
-    padding: 5px;
+.main {
+    height: 100%;
+}
+
+img {
+    vertical-align: unset;
 }
 
 .character-info {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 75px;
-    background: lightcyan;
+    height: 20%;
+    background-color: aqua;
+}
+
+.side-nav {
+    height: 100%;
+    background-color: aquamarine;
+    text-align: center;
+    overflow: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 #content-wrapper {
-    padding-left: 50px;
-    padding-top: 75px;
+    height: 100%;
+    background-color:burlywood;
 }
 
-.user-panel i {
-    width: 2.1rem;
-    height: auto;
+.content-row {
+    height: 80%;
 }
 
 .site-link {
